--- a/public/src/components/RightBar.css
+++ b/public/src/components/RightBar.css
@@ -1,94 +1,70 @@
-.RightBar{position: absolute;
-    
-left:75%;
+.RightBarC{position: absolute;
+    z-index: 5;
+left:95%;
+
+
+height: 30%;
 top:0;
-height: 80%;
-z-index:1;
-width: 25%;
+position:fixed;
+
+width: 5%;
+
 
 }
 
-.ObjetPerdu{
-    border: 3px solid var(--text-color);
-    background-color: #ebe2e2;
-    max-height: 200px;
-    min-height: 200px;
-    width: 60%;
-    margin-top: 60px;
-    margin-left: 38%;
-   border-radius: 10px;
-}
-.AnOp{
-    color: var(--text-color);
-   margin: 5px 10px;
-   border-radius: 5px;
-  
-    background-color: var(--sidebar-color);
-    border: 2px solid var(--text-color);
-    height: 30px;
-    padding: 5px;
-}
-.AnOp p{
-    margin-top: -5px;
-}
-.OpTitle{
- color: var(--text-color);
- font: bold;
- font-size: 17px;
- margin: 10px;
- margin-left: 30%;
-}
-.Am{
-    
-    background-color: var(--text-color);
-    cursor: pointer;
-    height: 42px;
-    width: 42px;
-    border-radius: 25px;
-    margin-left:85%;
-    font-size: 0;
-    margin-top: 5px;
-}
-.greenC{
-    position: relative
-;
-z-index: 4;
-height: 10px;
-margin-left: 30px;
-margin-top: -10px;
-}
-.AmO{
-    
-    background-color: var(--sidebar-color);
+/*-----------*/
+.RightBarF{
+    position: sticky;
+   margin-left: 0%;
    
-    border:   2px solid var(--text-color);
-    height: 40px;
-    width: 70%;
-    margin-top: 10px;
-    margin-left: 28%;
-    display: flex;
-    color: var(--text-color);
-    border-radius: 25px;
+    height: 00px;
+    z-index: 5;
+    width: 100%;
+    
 }
-.greenCO{
-    position: relative
-;
-z-index: 4;
-height: 20px;
-margin-left: 10px;
-margin-top: 10px;
-}
-.AmText{
-    margin-left: 10px;
-    margin-top: 5px;
-    width: 150px;
-}
-.AVAM{
-    margin-top: -2px;
-    margin-left: -2px;
-} 
-
-.ListAmis{
-    margin-top: 30px;
+/*-----------*/
+.RightBarOC{
   
+   margin-left: 0%;
+  
+    height: 280px;
+    width: 100%;
+    background-color: #dddbdb;
+    border-radius: 0 0 0 100px;
+}
+.RightBarO{
+    position: sticky;
+    
+}
+/*-----------*/
+.AvatarR{
+    padding: 20px;
+   margin-top: 48px;
+}
+.AvatarR:hover{
+    cursor: pointer;
+    background-color: #0087a1;
+    color: blanchedalmond;
+}
+.iconR{
+  
+    color:#0087a1;
+    padding: 20px;
+   
+}
+.iconR:hover{
+    cursor: pointer;
+    background-color: #0087a1;
+    color: blanchedalmond;
+}
+.OpenR{
+    padding: 20px;
+    display: flex;
+    width: 320px;
+    
+    font-size: 18px;
+    background-color: #0087a1;
+    color: white;
+    margin-left: -140px;
+    border-radius: 0 0 0 40%;
 }
