--- a/public/src/pages/Announcements/Announcements.css
+++ b/public/src/pages/Announcements/Announcements.css
@@ -12,7 +12,7 @@
     background: #bac2c21e;
     width: 400px;
     position: sticky;
-    top: 122px;
+    top: 5rem;
    padding: 20px;
     border: solid 2px rgb(128, 124, 124);
     border-radius: 10px;
