--- a/public/src/components/Losts.css
+++ b/public/src/components/Losts.css
@@ -28,7 +28,10 @@ padding-right: 10px;}
     font-size: 20px;
     padding-top: 8px;
     padding-right: 10px;
-font-weight: 700;
+font-weight: 500;
+max-width : 200px;
+max-height : 50px;
+overflow : clip;
 }
 .LostCard1{ display: flex;}
 
